[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
googletest = "0.10.0"

[[bin]]
name = "day2_exec"
test = true
bench = true
path = "src/day2_main.rs"

[[bin]]
name = "day3_exec"
test = true
bench = true
path = "src/day3_main.rs"

[[bin]]
name = "day4_exec"
test = true
bench = true
path = "src/day4_main.rs"

[[bin]]
name = "day5_exec"
test = true
bench = true
path = "src/day5_main.rs"

[[bin]]
name = "day6_exec"
test = true
bench = true
path = "src/day6_main.rs"